# dust

./: .gitignore  .metadata  Cargo.toml  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  rustfmt.toml
.github/workflows/: android.yml  desktop.yml  ios.yml  rust-build.yml
android/: build.gradle  settings.gradle
cargokit/: run_build_tool.sh
docs/: outline.md  state-management-theory.md
docs/intro/: 1.QuickStart.md  2.BackStory.md
example/: .gitignore  README.md  build.yaml  pubspec.yaml
example/integration_test/: integration_test.dart  integration_test.dust.dart  integration_test.g.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt  (+1 more)
generator/: README.md  build.yaml  pubspec.yaml
ios/: beacons.podspec  dust.podspec  qinhuai.podspec
lib/: annotations.dart  dust.dart  ffi.dart  multimap.dart  qinhuai.dart  reactive.dart  serializer.dart  serializers.dart  store.dart
linux/: CMakeLists.txt
macos/: beacons.podspec  dust.podspec  qinhuai.podspec
native/: .gitignore  Cargo.toml  cbindgen.toml  qinhuai.h
native/macros/src/: lib.rs
native/src/: ffi.rs  global.rs  lib.rs  observable.rs  store.rs  workspace.rs
native/src/ffi/: drop.rs  store.rs  structs.rs  test.rs
native/src/joinable/: edge_set.rs
native/src/observable/: atom_set.rs
native/src/workspace/: atom_set.rs  edge_set.rs  list_set.rs  metadata.rs  node_set.rs
native/tests/: macros.rs
src/: controller.rs  graph.rs  joinable.rs  lib.rs  observable.rs  persistent.rs  reactive.rs
test/: qinhuai_test.dart  serializer_test.dart
windows/: CMakeLists.txt
(+146 files in other folders)
