[package]
name = "beacons"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "lib", "cdylib", "staticlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = "1.3.3"
derive_more = "0.99.17"
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = [ "bundled" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
thiserror = "1.0.49"
